[package]
name = "pras"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "compiler_bench"
harness = false

[[bench]]
name = "vm_bench"
harness = false
